@@ -1,7 +1,6 @@
 package suite.immutable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
@@ -110,7 +109,7 @@ public class IBinPriorityQueue<T> {
 		for (int rank = 0; rank < maxRank; rank++) {
 			List<Node> list1 = new ArrayList<>();
 
-			for (Node t : Arrays.asList(tree, trees[rank], pq.trees[rank]))
+			for (Node t : List.of(tree, trees[rank], pq.trees[rank]))
 				if (t != null)
 					list1.add(t);
 
