@@ -1,7 +1,6 @@
 package suite.math;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -21,7 +20,7 @@ import suite.streamlet.Read;
 public class SymbolicMathUtil {
 
 	private static Complexity complexity = new Complexity();
-	private static Prover prover = Suite.newProver(Arrays.asList("auto.sl", "math.sl"));
+	private static Prover prover = Suite.newProver(List.of("auto.sl", "math.sl"));
 
 	private static Comparator<Node> comparator = (n0, n1) -> complexity.complexity(n0) - complexity.complexity(n1);
 
