@@ -8,9 +8,9 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.URL;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Enumeration;
+import java.util.List;
 import java.util.Map;
 
 import suite.Constants;
@@ -67,7 +67,7 @@ public class Read {
 	}
 
 	public static <K, V> Streamlet2<K, V> each2(K k, V v) {
-		return from2(Arrays.asList(Pair.of(k, v)));
+		return from2(List.of(Pair.of(k, v)));
 	}
 
 	public static <T> Streamlet<T> from(T[] ts) {
