@@ -3,7 +3,7 @@ package suite.lp.doer;
 import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.Test;
 
@@ -14,14 +14,14 @@ public class ImportTest {
 
 	@Test
 	public void testImport() throws IOException {
-		RuleSet rs = Suite.newRuleSet(Arrays.asList("auto.sl"));
+		RuleSet rs = Suite.newRuleSet(List.of("auto.sl"));
 		assertTrue(Suite.proveLogic(rs, "list"));
 		assertTrue(Suite.proveLogic(rs, "list repeat"));
 	}
 
 	@Test
 	public void testImportFunCompiler() throws IOException {
-		RuleSet rs = Suite.newRuleSet(Arrays.asList("auto.sl", "fc/fc.sl"));
+		RuleSet rs = Suite.newRuleSet(List.of("auto.sl", "fc/fc.sl"));
 		System.out.println(rs.getRules().size());
 	}
 
